@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Devel-GlobalDestruction
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-GlobalDestruction/ChangeLog,v 1.18 2012/08/04 21:10:49 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-GlobalDestruction/ChangeLog,v 1.19 2012/08/06 11:22:33 tove Exp $
+
+*Devel-GlobalDestruction-0.80.0 (06 Aug 2012)
+
+  06 Aug 2012; Torsten Veller <tove@gentoo.org>
+  +Devel-GlobalDestruction-0.80.0.ebuild:
+  Version bump
 
   04 Aug 2012; Johannes Huber <johu@gentoo.org>
   Devel-GlobalDestruction-0.50.0.ebuild:
